Fix layout problem that occurred for long value ids or labels in valuelist editor

--- a/desktop/src/app/components/configuration/editor/valuelist-editor-modal.scss
+++ b/desktop/src/app/components/configuration/editor/valuelist-editor-modal.scss
@@ -73,6 +73,9 @@
   background-color: #e9ecef;
   user-select: none;
   font-size: 13px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .value-drag-placeholder {
